# project_classf_news

./: .gitignore  hasil_klasifikasi_news.csv  pyproject.toml  requirements.txt  run.py  training.ipynb
